Bug 146799 - digikam 0.9.2 crashes when exiting - slideshow error
Summary: digikam 0.9.2 crashes when exiting - slideshow error
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-Presentation (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-14 23:01 UTC by Geoff King
Modified: 2018-03-23 12:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Geoff King 2007-06-14 23:01:14 UTC
Version:           0.1.4 svn (using KDE KDE 3.5.7)
Installed from:    Ubuntu Packages
OS:                Linux

The latest svn update for the kipi-plugins slideshow seems to cause digikam final to crash up digikam exit.  It does not seem to affect digikam when it is running, but the Advanced Slideshow is not available in the menus.  

This seems to have started when the new feature 
"Images can be sorted/added/removed manually" was added yesterday.

A backtrace is below (let me know if you need me to recompile with debug options).  I just noticed that an identical bug report with more info is listed in the digikam-users list at http://mail.kde.org/pipermail/digikam-users/2007-June/003763.html

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread -1249413424 (LWP 30871)]
0xb313a90f in Plugin_SlideShow::~Plugin_SlideShow () from /usr/lib/kde3/kipiplugin_slideshow.so
(gdb) bt
#0  0xb313a90f in Plugin_SlideShow::~Plugin_SlideShow () from /usr/lib/kde3/kipiplugin_slideshow.so
#1  0xb61be717 in QObject::~QObject () from /usr/lib/libqt-mt.so.3
#2  0xb74d1f18 in KIPI::Interface::~Interface () from /usr/lib/libkipi.so.0
#3  0xb7c6542d in Digikam::DigikamKipiInterface::~DigikamKipiInterface () from /usr/lib/libdigikam.so.0
#4  0xb61f7a4f in QWidget::~QWidget () from /usr/lib/libqt-mt.so.3
#5  0xb62c8bb4 in QMainWindow::~QMainWindow () from /usr/lib/libqt-mt.so.3
#6  0xb6be5266 in KMainWindow::~KMainWindow () from /usr/lib/libkdeui.so.4
#7  0xb7bf926b in Digikam::DigikamApp::~DigikamApp () from /usr/lib/libdigikam.so.0
#8  0xb61b9f54 in QObject::event () from /usr/lib/libqt-mt.so.3
#9  0xb61f158f in QWidget::event () from /usr/lib/libqt-mt.so.3
Comment 1 Gerry Patterson 2007-06-14 23:24:32 UTC
Hello,

It was my report mentioned on the digikam users list.  The only thing I have to add here, is if you actually create a slideshow and run it, digikam does not crash on exit.  If you start digikam and exit right away, digikam will crash everytime.

Something bad happens when one attempts to delete the member m_urllist in the plugin_slideshow class when the destructor is called.

Regards,

 Gerry
Comment 2 Valerio Fuoglio 2007-06-15 00:23:17 UTC
SVN commit 675742 by vfuoglio:

Fixed BUG 146799 , titled "digikam 0.9.2 crashes when exiting - slideshow error".

BUG: 146799
CCMAIL: kde-imaging@kde.org
CCMAIL: digikam-users@kde.org


 M  +2 -2      plugin_slideshow.cpp  


--- branches/extragear/kde3/libs/kipi-plugins/slideshow/plugin_slideshow.cpp #675741:675742
@@ -78,6 +78,8 @@
 
     m_interface = dynamic_cast< KIPI::Interface* >( parent() );
     
+    m_urlList = new KURL::List();
+
     if ( !m_interface ) 
     {
        kdError( 51000 ) << "Kipi m_interface is null!" << endl;
@@ -118,8 +120,6 @@
     }
 
     m_imagesHasComments = m_interface->hasFeature(KIPI::ImagesHasComments);
-
-    m_urlList = new KURL::List();
     
     KIPISlideShowPlugin::SlideShowConfig *slideShowConfig
             = new KIPISlideShowPlugin::SlideShowConfig( allowSelectedOnly, m_interface,kapp->activeWindow(),