Fixed BUG 146799 , titled "digikam 0.9.2 crashes when exiting - slideshow error".

BUG: 146799
CCMAIL: kde-imaging@kde.org
CCMAIL: digikam-users@kde.org

svn path=/branches/extragear/kde3/libs/kipi-plugins/; revision=675742